added graph matrices

--- a/AnalyticalPageRank.ipynb
+++ b/AnalyticalPageRank.ipynb
@@ -75,8 +75,8 @@
    "outputs": [],
    "source": [
     "# mat = nx.adjacency_matrix(G)\n",
-    "mat = load_matrix('./sergey_pagerank/adg_3.npy')\n",
-    "pagerank_mcmc = np.load('sergey_pagerank/pagerank_3.npy')"
+    "mat = load_matrix('./graph_samples/adg_3.npy')\n",
+    "pagerank_mcmc = np.load('graph_samples/pagerank_3.npy')"
    ]
   },
   {
@@ -162,8 +162,8 @@
    ],
    "source": [
     "# mat = nx.adjacency_matrix(G)\n",
-    "mat5 = load_matrix('./sergey_pagerank/adg_4_empty.npy')\n",
-    "pagerank_mcmc5 = np.load('sergey_pagerank/pagerank_4_empty.npy')\n",
+    "mat5 = load_matrix('./graph_samples/adg_4_empty.npy')\n",
+    "pagerank_mcmc5 = np.load('graph_samples/pagerank_4_empty.npy')\n",
     "draw_graph(mat5.T)"
    ]
   },
@@ -228,8 +228,8 @@
    ],
    "source": [
     "# mat = nx.adjacency_matrix(G)\n",
-    "mat5 = load_matrix('./sergey_pagerank/adg_barabsi.npy')\n",
-    "pagerank_mcmc5 = np.load('sergey_pagerank/pagerank_barabsi.npy')\n"
+    "mat5 = load_matrix('./graph_samples/adg_barabsi.npy')\n",
+    "pagerank_mcmc5 = np.load('graph_samples/pagerank_barabsi.npy')\n"
    ]
   },
   {
